--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "aos": "^2.3.4",
+    "axios": "^1.7.9",
     "clsx": "^2.1.1",
     "file-saver": "^2.0.5",
     "framer-motion": "^11.13.1",
